[sc-2643] Implement pdf tile (#338)
* New PDF tile component

  - Extract common tile style in _tile.scss
  - Extract common components in common: indicators, paragraph-results, thumbnail
  - Use PdfTile when icon is application/pdf
  - Fix thumbnail background color
  - Create DocTypeIndicator for PdfTile
  - Refactor CloseButton to become IconButton
  - Add optional parameters to translation
  - Display expanded tile in fullscreen

* new PDF viewer

  - Load PDF viewer (script and css)
  - Override style of text found in PDF to match Nuclia's theme
  - If page is known, go to selected page
  - Find and highlight selected paragraph
  - Pdf controller bar allowing to navigate through pages and to zoom in/out
  - Fix title ellipsis on pdf header

* Hide indicator on PDF tile

until backend provide page in search results

* Working previous/next result buttons

* Mobile & tablet view + some fixes in time indicator

* New chevrons-left glyph

* Improve highlighting

* PDF tile side panel

  - When side panel is open:
    - disable search result navigator
    - show global search query by default
  - Open/close the side panel using cmd+F or ctrl+F
  - Display search results in side panel and highlight selected paragraph
  - Working find in PDF input

* Don't keep backup of selected paragraph during search in PDF

* Highlight in search results

* Fix video tile

  - Put back find bar in side panel
  - Display time indicator even when undefined
  - Fix paragraph selection in full transcript

--- a/libs/search-widget/src/common/indicators/_indicator.scss
+++ b/libs/search-widget/src/common/indicators/_indicator.scss
@@ -1,4 +1,4 @@
-.sw-time-player {
+.sw-indicator {
   align-items: center;
   background: var(--color-neutral-background);
   border-radius: var(--rhythm-4);
@@ -7,17 +7,9 @@
   gap: var(--rhythm-0_25);
   line-height: var(--rhythm-3);
   max-width: var(--rhythm-9);
-  padding: 0 var(--rhythm-1_5) 0 var(--rhythm-1);
+  padding: 0 var(--rhythm-1);
   position: relative;
   transition: background-color var(--transition-superfast);
-
-  &.minimized {
-    border-radius: 50%;
-    padding: var(--rhythm-1);
-  }
-  &.minimized .time-label {
-    display: none;
-  }
 
   &:active {
     background: var(--color-neutral-light);
@@ -39,8 +31,4 @@
     color: var(--color-light-stronger);
   }
 }
-@media (hover: hover) {
-  .sw-time-player:not(.hovering):hover {
-    background: var(--color-neutral-lighter);
-  }
-}
+
