--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -56,8 +56,10 @@
   --rhythm-24: calc(var(--spacer) * 24);     /*  24   unit - 192px */
   --rhythm-28: calc(var(--spacer) * 28);     /*  28   unit - 224px */
   --rhythm-32: calc(var(--spacer) * 32);     /*  32   unit - 256px */
+  --rhythm-36: calc(var(--spacer) * 36);     /*  36   unit - 288px */
   --rhythm-39: calc(var(--spacer) * 39);     /*  39   unit - 312px */
   --rhythm-40: calc(var(--spacer) * 40);     /*  40   unit - 320px */
+  --rhythm-46: calc(var(--spacer) * 46);     /*  46   unit - 368px */
   --rhythm-48: calc(var(--spacer) * 48);     /*  48   unit - 384px */
   --rhythm-53: calc(var(--spacer) * 53);     /*  53   unit - 424px */
   --rhythm-56: calc(var(--spacer) * 56);     /*  56   unit - 448px */
@@ -65,7 +67,8 @@
 
   /* TYPOGRAPHY */
   --font-size-base: var(--custom-font-size-base, 16px);
-  --font-size-small: var(--custom-font-size-base, 13px);
+  --font-size-small: 13px;
+  --font-size-xsmall: 12px;
   --font-weight-body: var(--custom-font-weight-body, 300);
   --font-weight-semi-bold: var(--custom-font-weight-semi-bold, 500);
   --font-weight-bold: var(--custom-font-weight-semi-bold, 700);
