--- a/libs/search-widget/src/old-components/search-input/SearchInput.scss
+++ b/libs/search-widget/src/old-components/search-input/SearchInput.scss
@@ -1,8 +1,9 @@
 .sw-search-input {
+  box-sizing: border-box;
   position: relative;
 
   input {
-    font-size: calc(var(--font-size-base) * 1.5);
+    font-size: var(--font-size-base);
     font-weight: var(--font-weight-body);
     line-height: calc(var(--line-height-body) * 1.5);
     border: 0;
@@ -21,21 +22,19 @@
     transition: all 0s ease;
   }
 
-  .search-bar-widget {
+  &.search-bar-widget {
     border: var(--search-bar-border);
     border-radius: var(--search-bar-border-radius);
-    font-size: var(--font-size-base);
     max-width: var(--search-bar-max-width);
     padding: var(--search-bar-padding);
   }
 
-  .search-bar-widget:focus,
-  .embedded-search:focus {
+  &.search-bar-widget:focus-within,
+  &.embedded-widget:focus-within {
     border: var(--search-bar-border-focus);
   }
 
-  .embedded-search {
-    font-size: var(--font-size-base);
+  &.embedded-widget {
     padding: var(--form-widget-padding);
     border-width: var(--form-widget-border-width);
     border-style: var(--form-widget-border-style);
@@ -43,8 +42,7 @@
     border-radius: var(--form-widget-border-radius);
   }
 
-  .input-widget {
-    font-size: var(--font-size-base);
+  &.popup-widget {
     line-height: var(--line-height-body);
     padding: var(--input-widget-padding);
     border-width: var(--input-widget-border-width);
@@ -53,12 +51,11 @@
     border-radius: var(--input-widget-border-radius);
   }
 
-  .input-widget:focus,
-  .input-widget:active {
+  &.popup-widget:focus-within {
     border-style: var(--input-widget-border-style-stronger);
   }
 
-  .input-widget::placeholder {
+  &.popup-widget input::placeholder {
     color: var(--input-widget-placeholder-color);
   }
 
@@ -107,11 +104,12 @@
   }
 }
 
-.sw-suggestions {
+.sw-suggestions-container {
   padding: var(--rhythm-2);
 }
 @media (min-width: 448px) {
-  .sw-search-input.search-bar-container {
+  .sw-search-input.embedded-widget,
+  .sw-search-input.search-bar-widget {
     width: var(--search-bar-max-width);
   }
 }
