--- a/libs/search-widget/src/tiles/_tile.scss
+++ b/libs/search-widget/src/tiles/_tile.scss
@@ -48,7 +48,7 @@
     left: 0;
     overflow: hidden;
     padding-top: var(--header-height);
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     z-index: 1000;
