--- a/apps/dashboard/src/app/upload/upload-files/upload-files.component.html
+++ b/apps/dashboard/src/app/upload/upload-files/upload-files.component.html
@@ -118,9 +118,11 @@
 
     <ncom-hint label="How to upload a file with the API">
       <pre><code class="highlight">curl $$KB_URL$$/upload \
-     -X POST \
-     -H "authorization: Bearer $$AUTH_TOKEN$$" \
-     -T /path/to/file</code></pre>
+  -X POST \
+  -H "content-type: video/mp4"
+  -H "x-language: fr"
+  -H "authorization: Bearer $$AUTH_TOKEN$$" \
+  -T /path/to/your-video.mp4</code></pre>
       <p>
         Note: the authorization token here will expired. If you want a long-term approach, you should use a service
         access token and put it in the <code>X-STF-Serviceaccount</code> header.
