--- a/libs/search-widget/src/old-components/suggestions/Suggestions.scss
+++ b/libs/search-widget/src/old-components/suggestions/Suggestions.scss
@@ -1,57 +1,51 @@
 .sw-suggestions {
+  --suggestion-side-padding: var(--rhythm-3);
+
+  section {
+    padding: var(--rhythm-2) var(--suggestion-side-padding);
+  }
+  section:last-of-type {
+    padding-bottom: 0;
+  }
+
+  section:not(:last-of-type) {
+    border-bottom: 0.5px solid var(--color-neutral-light);
+  }
+
   h3 {
-    text-transform: uppercase;
-    margin: 0 0 1em 1.3em;
-    font-size: 12px;
+    font-size: var(--font-size-xsmall);
+    margin: 0;
   }
   .paragraph {
-    font-size: 15px;
-    line-height: 18px;
-    margin: 10px 12px 10px -16px;
-    padding-left: 32px;
     cursor: pointer;
+    font-size: var(--font-size-base);
+    line-height: var(--line-height-body-s);
+    margin: 0 calc(var(--suggestion-side-padding) * -1);
+    padding: var(--rhythm-1) var(--suggestion-side-padding);
   }
   .paragraph:hover,
   .paragraph:focus {
-    padding-left: 29px;
-    border-left: 3px solid var(--color-primary-regular);
+    background-color: var(--color-neutral-background);
     outline: 0;
   }
-  .show-more {
-    display: inline-block;
-    margin: 6px 0 0 16px;
-    cursor: pointer;
-  }
-  .show-more span {
-    vertical-align: middle;
-    padding-left: 4px;
-    font-size: 15px;
-    font-style: italic;
-  }
-  .show-more:hover span {
-    text-decoration: underline;
-  }
-  p {
-    text-align: right;
-    font-size: small;
-    color: var(--color-neutral-regular);
-    margin: 0;
-  }
+
   .intents {
-    margin: 0 0 0.5em 1em;
+    display: flex;
+    gap: var(--rhythm-1);
+    margin: var(--rhythm-1) 0;
     padding: 0;
   }
   .intents li {
     display: inline-block;
-    margin: 0 4px 4px 0;
-    padding: 0.25em 1em;
+    padding: var(--rhythm-0_5) var(--rhythm-2);
     max-width: 100%;
-    font-size: 0.75em;
+    font-size: var(--font-size-xsmall);
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    // FIXME: use real label component instead
     color: #454ade;
     background-color: #e6e6f9;
-    border-radius: 2px;
+    border-radius: var(--rhythm-0_25);
   }
 }
