--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.html
@@ -1,13 +1,16 @@
-<stf-section-navbar title="stash.side.trainings" [sections]="[]">
+<stf-section-navbar title="stash.side.trainings"
+                    [sections]="[]">
   <stf-section-navbar-body>
     <div class="knowledge-box-processes">
-      <div *ngIf="cannotTrain | async" class="warning">
+      <div *ngIf="cannotTrain | async"
+           class="warning">
         {{ 'stash.settings.processes.training.not-allowed' | translate }}
       </div>
       <section *ngFor="let type of [trainingTypes.classifier, trainingTypes.labeller]">
         <h2>{{ 'stash.settings.processes.' + type | translate }}</h2>
         <p class="last-run">
-          <small>{{ 'stash.settings.processes.training.last_run' | translate: { runDate: lastRun[type] ? (lastRun[type] | date:'YYYY-MM-dd HH:mm') : '–' } }}</small>
+          <small>{{ 'stash.settings.processes.training.last_run' | translate: { runDate: lastRun[type] ? (lastRun[type]
+            | date:'YYYY-MM-dd HH:mm') : '–' } }}</small>
         </p>
 
         <div [class.running]="running[type]">
@@ -47,17 +50,19 @@
 
             <div class="agreement-container">
               <pa-checkbox [disabled]="cannotTrain | async"
-                           [(value)]="agreement[type]">{{'stash.settings.processes.training.agreement' | translate}}</pa-checkbox>
+                           [(value)]="agreement[type]">{{'stash.settings.processes.training.agreement' | translate}}
+              </pa-checkbox>
             </div>
           </ng-container>
         </div>
 
-        <div *ngIf="running[type]" class="active-training warning">
+        <div *ngIf="running[type]"
+             class="active-training warning">
           {{ 'stash.settings.processes.training.active' | translate }}
         </div>
         <div class="cta-container">
           <pa-button [kind]="running[type] ? 'secondary' : 'primary'"
-                     [disabled]="(!running[type] && !agreement[type]) || (cannotTrain | async)"
+                     [disabled]="(!running[type] && (isBillingEnabled | async) && !agreement[type]) || (cannotTrain | async)"
                      (click)="startOrStopTraining(type)">
             {{ 'stash.settings.processes.training.' + (running[type] ? 'stop' : 'start') | translate }}
           </pa-button>
