[sc-2939] Update languages list in upload modal
  - Update languages list in upload modal
  - Sort languages list alphabetically

--- a/apps/dashboard/src/app/upload/upload-files/upload-files.component.html
+++ b/apps/dashboard/src/app/upload/upload-files/upload-files.component.html
@@ -111,8 +111,8 @@
               [formControl]="langMultiSelect"
               (change)="onSelectLanguageMulti($event)">
         <option value="">{{ 'generic.select_language' | translate }}</option>
-        <option [value]="lang"
-                *ngFor="let lang of languageList">{{ 'language.' + lang | translate }}</option>
+        <option [value]="language.lang"
+                *ngFor="let language of languageList">{{ language.label }}</option>
       </select>
     </div>
 
