--- a/libs/search-widget/src/common/thumbnail/Thumbnail.scss
+++ b/libs/search-widget/src/common/thumbnail/Thumbnail.scss
@@ -21,4 +21,17 @@
       height: var(--rhythm-20);
     }
   }
+
+  /* TODO: replace with a svelte transition once "insertRule" error is solved  */
+  .fade-in {
+    animation: fadeIn 0.16s;
+  }
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 }
