--- a/apps/dashboard/src/app/components/stash-navbar/stash-navbar.component.html
+++ b/apps/dashboard/src/app/components/stash-navbar/stash-navbar.component.html
@@ -1,66 +1,60 @@
-<div class="stash-navbar" [class.is-unfolded]="isUnfolded">
+<div class="stash-navbar"
+     [class.is-unfolded]="isUnfolded">
   <div class="navbar-scroll-container">
-    <div *ngIf="!(inAccount | async)" class="navbar-content">
+    <div *ngIf="!(inAccount | async)"
+         class="navbar-content">
       <div class="nav-group">
-        <div class="group-items" tourAnchor="step5">
-          <a *ngIf="isLinkEnabled | async"
-             class="nav-link"
+        <div class="group-items"
+             tourAnchor="step5">
+          <a class="nav-link"
              [class.disabled]="!(isAdminOrContrib | async)"
-             (click)="createNewLink()"
-          >
+             (click)="createNewLink()">
             <pa-icon name="link"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.link' | translate }}</span>
           </a>
-          <a *ngIf="isUploadEnabled | async"
-             class="nav-link"
+          <a class="nav-link"
              [class.disabled]="!(isAdminOrContrib | async)"
-             (click)="uploadNewFiles(false)"
-          >
+             (click)="uploadNewFiles(false)">
             <pa-icon name="file"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.file' | translate }}</span>
           </a>
           <a *ngIf="isUploadFolderEnabled | async"
              class="nav-link"
              [class.disabled]="!(isAdminOrContrib | async)"
-             (click)="uploadNewFiles(true)"
-          >
+             (click)="uploadNewFiles(true)">
             <pa-icon name="folder"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.folder' | translate }}</span>
           </a>
         </div>
       </div>
       <div class="nav-group">
-        <div class="group-items" tourAnchor="step6">
+        <div class="group-items"
+             tourAnchor="step6">
           <a *ngIf="isActivityEnabled | async"
              [routerLink]="kbUrl + '/activity'"
              routerLinkActive="active"
              class="nav-link"
-             [class.disabled]="!(isAdminOrContrib | async)"
-          >
+             [class.disabled]="!(isAdminOrContrib | async)">
             <pa-icon name="activity-log"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.activity' | translate }}</span>
           </a>
-          <a *ngIf="isResourcesEnabled | async"
-             [routerLink]="kbUrl + '/resources'"
+          <a [routerLink]="kbUrl + '/resources'"
              routerLinkActive="active"
-             class="nav-link"
-          >
+             class="nav-link">
             <pa-icon name="list"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.list' | translate }}</span>
           </a>
           <a *ngIf="isOntologiesEnabled | async"
              [routerLink]="kbUrl + '/ontologies'"
              routerLinkActive="active"
-             class="nav-link"
-          >
+             class="nav-link">
             <pa-icon name="label"></pa-icon>
             <span class="nav-link-title">{{ 'resource.classification' | translate }}</span>
           </a>
           <a *ngIf="isEntitiesEnabled | async"
              [routerLink]="[kbUrl + '/entities']"
              routerLinkActive="active"
-             class="nav-link"
-          >
+             class="nav-link">
             <pa-icon name="search-plus"></pa-icon>
             <span class="nav-link-title">{{ 'generic.insights' | translate }}</span>
           </a>
@@ -72,39 +66,41 @@
           <a [routerLink]="kbUrl + '/manage'"
              routerLinkActive="active"
              class="nav-link"
-             [class.disabled]="!(isAdminOrContrib | async)"
-          >
+             [class.disabled]="!(isAdminOrContrib | async)">
             <pa-icon name="settings"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.settings' | translate }}</span>
           </a>
         </div>
-        <div *ngIf="isTrainingEnabled | async" class="group-items" tourAnchor="step7">
+        <div *ngIf="isTrainingEnabled | async"
+             class="group-items"
+             tourAnchor="step7">
           <a [routerLink]="kbUrl + '/processes'"
              routerLinkActive="active"
              class="nav-link"
-             [class.disabled]="!(isAdminOrContrib | async)"
-          >
+             [class.disabled]="!(isAdminOrContrib | async)">
             <pa-icon name="submenu"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.trainings' | translate }}</span>
           </a>
         </div>
         <ng-container *ngIf="isAccountManager | async">
-          <div *ngIf="isUsersEnabled | async" class="group-items" tourAnchor="step9">
+          <div *ngIf="isUsersEnabled | async"
+               class="group-items"
+               tourAnchor="step9">
             <a [routerLink]="kbUrl + '/users'"
                routerLinkActive="active"
-               class="nav-link"
-            >
+               class="nav-link">
               <pa-icon name="users"></pa-icon>
               <span class="nav-link-title">{{ 'stash.side.users' | translate }}</span>
             </a>
           </div>
         </ng-container>
-        <div *ngIf="isWidgetsEnabled | async" class="group-items" tourAnchor="step8">
+        <div *ngIf="isWidgetsEnabled | async"
+             class="group-items"
+             tourAnchor="step8">
           <a [routerLink]="kbUrl + '/widgets'"
              routerLinkActive="active"
              class="nav-link"
-             [class.disabled]="!(isAdminOrContrib | async)"
-          >
+             [class.disabled]="!(isAdminOrContrib | async)">
             <pa-icon name="widget"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.widgets' | translate }}</span>
           </a>
@@ -127,8 +123,7 @@
           <a [routerLink]="(accountUrl | async) + '/home'"
              class="nav-link"
              routerLinkActive="active"
-             [class.disabled]="!(isAccountManager | async)"
-          >
+             [class.disabled]="!(isAccountManager | async)">
             <pa-icon name="account"></pa-icon>
             <span class="nav-link-title">{{ 'account.manage' | translate }}</span>
           </a>
@@ -170,7 +165,8 @@
             <span class="nav-link-title">{{ 'account.nua_keys' | translate }}</span>
           </a>
         </div>
-        <div *ngIf="isBillingEnabled | async" class="group-items">
+        <div *ngIf="isBillingEnabled | async"
+             class="group-items">
           <a [routerLink]="(accountUrl | async) + '/billing'"
              routerLinkActive="active"
              class="nav-link">
@@ -179,9 +175,11 @@
           </a>
         </div>
       </div>
-      <div class="nav-group" *ngIf="kb | async">
+      <div class="nav-group"
+           *ngIf="kb | async">
         <div class="group-items">
-          <a [routerLink]="kbUrl" class="nav-link">
+          <a [routerLink]="kbUrl"
+             class="nav-link">
             <pa-icon name="home"></pa-icon>
             <span class="nav-link-title">{{ 'generic.back' | translate }}</span>
           </a>
