Fix [sc-2965]: set a min-width on suggestion dropdown
  - Set a min-width on suggestion dropdown
  - Input inherit background color
  - Fix Label on:remove listener

--- a/libs/search-widget/src/old-components/search-input/SearchInput.scss
+++ b/libs/search-widget/src/old-components/search-input/SearchInput.scss
@@ -10,16 +10,17 @@
 
 
   input {
+    background-color: inherit;
+    border: 0;
+    box-sizing: border-box;
+    color: inherit;
+    font-family: inherit;
     font-size: var(--font-size-base);
     font-weight: var(--font-weight-body);
     line-height: calc(var(--line-height-body) * 1.5);
-    border: 0;
-    font-family: inherit;
     outline: none;
-    width: calc(100% - var(--rhythm-0_25));
-    color: inherit;
     text-overflow: ellipsis;
-    box-sizing: border-box;
+    width: calc(100% - var(--rhythm-0_25));
 
     -webkit-appearance: none;
   }
